# Simple-InternetSpeed-Logger

./: README.md  app.icns  app.py  log_config.json  png2icns.sh  pyproject.toml  records_init.csv  setup.py  speedtest_cli.py  speedtester.py
